JDK 21 / Gradle 8.10.2 に対応
dq10rankdataconverter と同様の構成に合わせて以下を実施:
- Gradle Wrapper を 5.6.4 から 8.10.2 に更新（JDK21ではGradle5.6.4は起動不可）
- sourceCompatibility/targetCompatibility を JDK21 に変更
- mainClassName を application.mainClass に置き換え
- testCompile を testImplementation に置き換え（Gradle 7+で削除された設定）
- lombok を 1.16.10 から 1.18.34 に更新（古いバージョンはJDK16+のコンパイラ内部APIに対応不可）
- fat jar 生成時の重複エントリを除外するよう jar タスクに duplicatesStrategy を追加
- Class#newInstance() (JDK9で非推奨) を getDeclaredConstructor().newInstance() に置き換え
- gradlew/gradlew.bat/gradle-wrapper.jar を Gradle 8.10.2 用に再生成
- .gitignore の gradle-wrapper.jar 除外解除ルールをパス指定に修正

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>